added text input for customer name

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,9 +32,11 @@
 </div>
 
 <div class="burger-input">
-  <h2>Input Your Burger</h2>
   <form class="burger-form">
+    <label for="new-burger">Input Your Burger</label>
     <input type="text" id="new-burger" name="name">
+    <label for="new-customer">Input Customer Name</label>
+    <input type="text" id="new-customer" name="name">
     <button type="submit" id="submit-btn">Submit</button>
   </form>
 </div>
