--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -83,11 +83,12 @@ header h1 {
     margin-bottom: 20px;
 }
 
-#new-burger {
+.burger-input input {
+    display: block;
     font-size: 1em;
     width: 400px;
-    height: 100px;
     padding: 20px;
+    margin: 10px auto;
     border: 1px solid black;
     border-radius: 5px;
 }
