udpated burgers.js to add createBurger and createCustomer functions that would act asynchronously to receive customer id first before creating burger. Also included code into handlebars to accept customer name in ordered/devoured columns

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
   {{#each burgers}}
     {{#unless devoured}}
     <li>
-      {{burger_name}}
+      {{burger_name}} for <span class="for-customer">{{Customer.customer_name}}</span>
       <button class="devour-btn" data-id={{id}}>EAT ME</button>
     </li>
     {{/unless}}
@@ -22,7 +22,7 @@
   {{#each burgers}}
     {{#if devoured}}
     <li>
-      {{burger_name}}
+      {{burger_name}} eaten by <span class="by-customer">{{Customer.customer_name}}</span>
       <i class="fas fa-times burger-delete" data-id={{id}}></i>
     </li>
     {{/if}}
